# framework_part

base/: Android.bp
base/api/: Android.bp  ApiDocs.bp  StubLibraries.bp  api.go
base/boot/: Android.bp
base/boot/hiddenapi/: hiddenapi-max-target-r-loprio.txt  hiddenapi-unsupported.txt
base/cmds/app_process/: app_main.cpp
base/cmds/bootanimation/: BootAnimation.cpp
base/cmds/screencap/: screencap.cpp
base/cmds/svc/: svc.sh
base/core/api/: Android.bp  system-current.txt  system-lint-baseline.txt
base/core/jni/: Android.bp  AndroidRuntime.cpp  android_graphics_BLASTBufferQueue.cpp  android_hardware_Camera.cpp  android_media_AudioFormat.h  android_util_Process.cpp  android_util_SeempLog.cpp  fd_utils.cpp  (+6 more)
base/services/: proguard.flags
native/: Android.bp  METADATA  PREUPLOAD.cfg  TEST_MAPPING
native/include/: OWNERS
native/libs/binder/rust/: Android.bp  Cargo.toml  build.rs
native/libs/binder/rust/rpcbinder/: Android.bp
native/libs/binder/rust/rpcbinder/src/: lib.rs  session.rs
native/libs/binder/rust/rpcbinder/src/server/: android.rs  trusty.rs
native/libs/binder/rust/src/: binder.rs  lib.rs  native.rs  parcel.rs  persistable_bundle.rs  proxy.rs  service.rs  state.rs  system_only.rs
native/libs/binder/rust/src/parcel/: parcelable.rs  parcelable_holder.rs
native/libs/binder/rust/sys/: BinderBindings.hpp  Cargo.toml  build.rs  lib.rs
native/libs/binder/rust/tests/: integration.rs  serialization.rs
native/libs/binder/rust/tests/parcel_fuzzer/: parcel_fuzzer.rs
native/opengl/: Android.bp  OWNERS
native/vulkan/: Android.bp
(+1899 files in other folders)
